# raytracer

./: Cargo.toml  LICENSE  README.md
src/: camera.rs  color.rs  dielectric.rs  file_writer.rs  hittable.rs  lambertian.rs  main.rs  material.rs  metal.rs  ray.rs  render.rs  scenery.rs  sphere.rs  vec3.rs  vector.rs
src/environments/: environment.rs  mod.rs  spheres.rs
src/io/: deflate_zero.rs  image.rs  mod.rs  png.rs  ppm.rs  util.rs
