[package]
name = "raytracing-weekend"
version = "0.1.0"
authors = ["Alex Weaver <weaver.alex.d@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adler32 = "1.0.4"
clap = "2.33.0"
crc32fast = "1.2.0"
float-cmp = "0.6.0"
impl_ops = "0.1.1"
indicatif = "0.14.0"
rand = "0.7.3"
